--- a/.env dist
+++ b/.env dist
@@ -7,3 +7,7 @@ DATABASE_URL=mysql://root:123456@mysqldb:3306/supply-blockchain?connect_timeout=
 
 NODE_LOCAL_PORT=8081
 NODE_DOCKER_PORT=8080
+
+ETH_NODE_ENDPOINT=
+CONTRACT_ADDRESS=
+SYSTEM_PRIVATE_KEY=
