--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.13.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
-    "prisma": "^3.13.0"
+    "express-validator": "^6.14.0",
+    "generate-password": "^1.7.0",
+    "prisma": "^3.13.0",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
