--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "supply-blockchain-backend",
   "version": "1.0.0",
   "description": "Supply chain backend",
-  "main": "app.js",
+  "main": "server.js",
   "author": "",
   "license": "ISC",
   "dependencies": {
