--- a/.env dist
+++ b/.env dist
@@ -10,4 +10,5 @@ NODE_DOCKER_PORT=8080
 
 ETH_NODE_ENDPOINT=
 CONTRACT_ADDRESS=
-SYSTEM_PRIVATE_KEY=
+ADMIN_PANEL_PRIVATE_KEY=
+IOT_DEVICE_PRIVATE_KEY=
