--- a/.env dist
+++ b/.env dist
@@ -6,7 +6,7 @@ MYSQL_DOCKER_PORT=3306
 DATABASE_URL=mysql://root:123456@mysqldb:3306/supply-blockchain?connect_timeout=300
 
 NODE_LOCAL_PORT=8081
-NODE_DOCKER_PORT=8080
+PORT=8080
 
 ETH_NODE_ENDPOINT=
 CONTRACT_ADDRESS=
